--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+span {
+    @apply text-xs sm:text-sm md:text-base;
+}
+
+input {
+    @apply text-xs sm:text-sm md:text-base;
+}
+
+select {
+    @apply text-xs sm:text-sm md:text-base;
+}
