--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,50 @@
 @tailwind components;
 @tailwind utilities;
 
-span {
-  @apply text-xs sm:text-sm md:text-base;
+
+.drag-select {
+  display: flex;
+  flex-wrap: wrap;
+
 }
 
-input {
-  @apply text-xs sm:text-sm md:text-base;
+.drag-select__wrapper {
+  width: 100%;
+  border: 1px solid #ccc;
+  padding: 5px;
+  margin: 10px;
+  border-radius: 5px;
 }
 
-select {
-  @apply text-xs sm:text-sm md:text-base;
+.drag-select__area {
+  background: rgba(66, 153, 225, .5)
+}
+
+.drag-select__area:after {
+  display: block;
+  position: absolute;
+  content: " ";
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  border: 1px solid rgb(66, 153, 225)
+}
+
+.drag-select-option {
+  width: auto;
+  height: 20px;
+  margin: 2px;
+  color: #fff;
+  background: #ccc;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 4px;
+}
+
+.drag-select-option--selected {
+  color: #000;
+  background: #5fdddc
 }
